Rewrite the java code with Java 8